--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -1,11 +1,84 @@
-{% if themes %}
-    <ul>
-    {% for theme in themes %}
-        <li><a href="{% url 'games:game' theme.id %}">{{ theme.name }}</a></li>
-    {% endfor %}
-    <li><a href="{% url 'games:random_game'%}">Random words</a></li>
-    </ul>
-{% else %}
-    <p>No themes yet.</p>
-    <li><a href="{% url 'games:random_game'%}">Random words</a></li>
-{% endif %}
+{% extends 'games/basic_template.html' %} 
+
+{% block 'title' %}Games{% endblock 'title' %}
+
+{% block 'body' %}
+    <script>
+        function change_text_visibility() {
+            es_text = document.getElementById("game-translate-es-text");
+            ru_text = document.getElementById("game-translate-ru-text");
+            if (document.getElementById("game-translate-ru").checked) {
+                es_text.classList.add("text-muted");
+                ru_text.classList.remove("text-muted");
+            } else {
+                es_text.classList.remove("text-muted");
+                ru_text.classList.add("text-muted");
+            }
+        }
+    </script>
+    <div id="accordion">
+    
+        <div class="card">
+          <div class="card-header">
+            <a class="btn container-fluid text-start" data-bs-toggle="collapse" href="#collapseOne">
+              Перевод
+            </a>
+          </div>
+          <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+            <div class="card-body">
+                <div class="d-flex flex-row">
+                    <div class="me-2" id="game-translate-es-text">Es-Ru</div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="game-translate-ru" onclick="change_text_visibility()">
+                        <label class="form-check-label text-muted" for="game-translate-ru" id="game-translate-ru-text">Ru-Es</label>
+                    </div>
+                </div>
+                <div class="row row-cols-auto">
+
+                    <div class="card mt-3 mx-2 col rounded-4" style="width:300px; height:400px;">
+                        <img class="card-img-top rounded-5 mt-2" src="https://static-00.iconduck.com/assets.00/perspective-dice-six-faces-random-icon-2048x2048-9uct7e7b.png" alt="Card image" >
+                        <div class="card-body">
+                          <h4 class="card-title text-center">Случайные слова</h4>
+                          <a href="{% url 'games:random_game'%}" class="btn btn-primary container-fluid">Начать</a>
+                        </div>
+                    </div>
+
+                    {% if themes %}
+                        <ul>
+                        {% for theme in themes %}
+                            <div class="card mt-3 mx-2 col rounded-4" style="width:300px; height:400px;">
+                                <img class="card-img-top rounded-5 mt-2" src="https://static-00.iconduck.com/assets.00/perspective-dice-six-faces-random-icon-2048x2048-9uct7e7b.png" alt="Card image" >
+                                <div class="card-body">
+                                  <h4 class="card-title text-center">{{ theme.name }}</h4>
+                                  <a href="{% url 'games:game' theme.id %}" class="btn btn-primary container-fluid">Начать</a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <p>No themes yet.</p>
+                    {% endif %}
+
+
+
+                </div>
+                
+            </div>
+          </div>
+        </div>
+    
+        <div class="card">
+          <div class="card-header">
+            <a class="btn container-fluid text-start" data-bs-toggle="collapse" href="#collapseTwo">
+              Глаголы
+            </a>
+          </div>
+          <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+            <div class="card-body">
+              Lorem ipsum..
+            </div>
+          </div>
+        </div>
+        
+    </div>
+    
+{% endblock 'body' %}
