--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -24,7 +24,7 @@
               Перевод
             </a>
           </div>
-          <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+          <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
             <div class="card-body">
                 <div class="d-flex flex-row">
                     <div class="me-2" id="game-translate-es-text">Es-Ru</div>
@@ -44,7 +44,6 @@
                     </div>
 
                     {% if themes %}
-                        <ul>
                         {% for theme in themes %}
                             <div class="card mt-3 mx-2 col rounded-4" style="width:300px; height:400px;">
                                 <img class="card-img-top rounded-5 mt-2" src="https://static-00.iconduck.com/assets.00/perspective-dice-six-faces-random-icon-2048x2048-9uct7e7b.png" alt="Card image" >
