--- a/games/templates/games/basic_template.html
+++ b/games/templates/games/basic_template.html
@@ -25,6 +25,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'games:random_game'%}">Случайные слова</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><s>Случайные глаголы</s></a>
+              </li>
             </ul>
           </div>
         </div>
