--- a/games/templates/games/basic_template.html
+++ b/games/templates/games/basic_template.html
@@ -19,14 +19,20 @@
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'games:index'%}">Игры</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Игры</a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="{% url 'games:index'%}">Все игры</a></li>
+                  <li><a class="dropdown-item" href="{% url 'games:random_game'%}">Случайные слова</a></li>
+                  <li><a class="dropdown-item" href="#"><s>Случайные глаголы</s></a></li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'games:random_game'%}">Случайные слова</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><s>Случайные глаголы</s></a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Создать</a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="{% url 'games:new_word'%}">Создать слово</a></li>
+                  <li><a class="dropdown-item" href="#"><s>Создать тему</s></a></li>
+                </ul>
               </li>
             </ul>
           </div>
