--- a/games/templates/games/basic_template.html
+++ b/games/templates/games/basic_template.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'games/style.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'games/scripts.js' %}"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark sticky-top">
