several minor fixes

--- a/games/templates/games/click_game.html
+++ b/games/templates/games/click_game.html
@@ -4,6 +4,38 @@
 
 {% block 'body' %}
 
+<script>
+    function choice_game_check(url) {
+        var selectedChoice = document.querySelector('input[name="choice"]:checked')
+        var quizButton = document.getElementById("quizButton");
+
+        if (!selectedChoice) {
+            var quizForm = document.getElementById("quizForm");
+            Utils.shake(quizForm)
+        } 
+        else if ( selectedChoice && selectedChoice.value == "True") {
+            Utils.set_success_color([document.getElementById("quizHeader"), quizButton]);
+            Utils.disable_or_enable_elements(document.querySelectorAll('[name="choice"]'));
+            quizButton.innerHTML = "Далее";
+            setTimeout(Utils.change_url, 100, quizButton, url+"?theme_success=0");
+
+        } 
+        else {
+            if (quizButton.innerHTML != "Далее") {
+                var quizForm = document.getElementById("quizForm");
+                Utils.shake(quizForm)
+            }
+            
+            if (!url.includes("random")) {
+                Utils.set_error_color([document.getElementById("quizHeader"), quizButton]);
+                Utils.disable_or_enable_elements(document.querySelectorAll('[name="choice"]'));
+                quizButton.innerHTML = "Далее";
+                setTimeout(Utils.change_url, 100, quizButton, url);
+            }
+        }
+    }
+</script>
+
 <div class="container d-flex align-items-center justify-content-center" id="quizForm">
     <div class="card mt-3 mx-2 rounded-4" style="width:200px">
         <div class="card-header rounded-top-4" id="quizHeader">
@@ -14,7 +46,7 @@
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{% if translation == main_word.main_translation %}True{% else %}False{% endif %}">
             <label for="choice{{ forloop.counter }}" class="h6">{{ translation }}</label><br>
             {% endfor %}
-            <a href="#" class="btn btn-success container-fluid" onclick="ChoiceGame.choice_game_check({% if theme_id != None %}'{% url 'games:game' theme_id=theme_id %}'{% else %}'{% url 'games:random_game' %}'{% endif %})" id="quizButton">Ответить</a>
+            <a href="#" class="btn btn-success container-fluid" onclick="choice_game_check({% if theme_id != None %}'{% url 'games:game' theme_id=theme_id %}'{% else %}'{% url 'games:random_game' %}'{% endif %})" id="quizButton">Ответить</a>
         </div>
     </div>
 </div>
