added form to create themes

--- a/games/templates/games/basic_template.html
+++ b/games/templates/games/basic_template.html
@@ -34,7 +34,9 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Создать</a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                   <li><a class="dropdown-item" href="{% url 'games:new_word'%}">Создать слово</a></li>
-                  <li><a class="dropdown-item" href="#"><s>Создать тему</s></a></li>
+                  <li><a class="dropdown-item" href="{% url 'games:new_theme'%}">Создать тему</a></li>
+                  <li><a class="dropdown-item" href=""><s>Список слов</s></a></li>
+                  <li><a class="dropdown-item" href=""><s>Список тем</s></a></li>
                 </ul>
               </li>
             </ul>
