--- a/games/templates/games/create_word.html
+++ b/games/templates/games/create_word.html
@@ -88,7 +88,7 @@
             <input type="text" class="form-control" placeholder="Ты не должен это видеть" aria-describedby="basic-addon1" value="Vlada" disabled>
         </div>
         <div class="col-12">
-            <button class="btn btn-success" type="submit">Submit form</button>
+            <button class="btn btn-success" type="submit">Отправить</button>
         </div>
     </form>
 </div>
